Archive2/4e/204c2ebf801b88/output
main.cpp: In function 'int main()':
main.cpp:13:23: error: aggregate 'TD<int*&&> td1' has incomplete type and cannot be defined
     TD<decltype(arg)> td1;
                       ^
main.cpp:17:24: error: aggregate 'TD<int*&> td2' has incomplete type and cannot be defined
     TD<decltype(arg2)> td2;
                        ^
